Included contact page.

--- a/contact.html
+++ b/contact.html
@@ -40,27 +40,24 @@
             </div>
         </nav>
 
-        <section class="s1">
-            <div class="main-container">
-                <div class="greeting-wrapper">
-                    <img id="lw_pic" src="./images/lw.jpg">
-                </div>
-            </div>
-        </section>
-
         <section class="s2">
             <div class="main-container">
-                <a name="about"></a>
-                <div class="about-lw">
-                    <h3>About Lumpia World</h3>
-                    <p>Founded in 2006, Lumpia World is a Washington based food truck serving fusion Filipino and Islander cuisine.
-                        Voted 2016's "Best Food Truck" in Western Washington, Lumpia World focuses on quality, freshness, and community.
-                        Family owned with store fronts, Lumpia World can even cater your events! Come have a taste of the islands today!
-                    </p>
-                </div>
+                <h3 style="text-align: center;">Get In Touch</h3>
+                <form id="contact-form">
+                    <label>Name</label>
+                    <input class="input-field" type="text" name="name">
+                    <label>Subject</label>
+                    <input class="input-field" type="text" name="subject">
+                    <label>Email</label>
+                    <input class="input-field" type="text" name="email">
+                    <label>Message</label>
+                    <textarea input class="input-field" name="message"></textarea>
+                    <input id="submit-btn" type="submit" value="Send">
+                </form>
             </div>
         </section>
 
         <script type="text/javascript" src="script.js"></script>
+        
     </body>
 </html>
