Started bases for additional pages.

--- a/contact.html
+++ b/contact.html
@@ -21,13 +21,13 @@
                     <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="#">Our Story</a>
+                    <a href="story.html">Our Story</a>
                 </li>
                 <li>
-                    <a href="#">Media</a>
+                    <a href="media.html">Media</a>
                 </li>
                 <li>
-                    <a href="#">Menu</a>
+                    <a href="menu.html">Menu</a>
                 </li>
                 <li>
                     <a href="contact.html">Contact</a>
