--- a/media.html
+++ b/media.html
@@ -40,27 +40,15 @@
             </div>
         </nav>
 
-        <section class="s1">
-            <div class="main-container">
-                <div class="greeting-wrapper">
-                    
-                </div>
-            </div>
-        </section>
-
         <section class="s2">
             <div class="main-container">
-                <div class="about-lw">
-                    <img id="lw_pic" src="./images/lw.jpg">
-                    <h3>About Lumpia World</h3>
-                    <p>Founded in 2006, Lumpia World is a Washington based food truck serving fusion Filipino and Islander cuisine.
-                        Voted 2016's "Best Food Truck" in Western Washington, Lumpia World focuses on quality, freshness, and community.
-                        Family owned with store fronts, Lumpia World can even cater your events! Come have a taste of the islands today!
-                    </p>
+                <div class="media-lw">
+                    <h3>Lumpia World Media</h3>
                 </div>
             </div>
         </section>
 
         <script type="text/javascript" src="script.js"></script>
+        
     </body>
 </html>
