Included image slideshow and updated media page.

--- a/media.html
+++ b/media.html
@@ -44,6 +44,12 @@
             <div class="main-container">
                 <div class="media-lw">
                     <h3>Lumpia World Media</h3>
+
+                    <h5>LUMPIA WORLD WINS "BEST FOOD TRUCK" IN THE 2016 BEST OF WESTERN WASHINGTON CONTEST</h5>
+
+                    <iframe width="640" height="420" style="border:1px solid #e6e6e6" scrolling="no"
+                    src="https://king5.com/embeds/video/281-2423759/iframe" allowfullscreen="true"
+                    webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                 </div>
             </div>
         </section>
