Updated menu page with graphics.

--- a/media.html
+++ b/media.html
@@ -50,6 +50,10 @@
                     <iframe width="640" height="420" style="border:1px solid #e6e6e6" scrolling="no"
                     src="https://king5.com/embeds/video/281-2423759/iframe" allowfullscreen="true"
                     webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+
+                    <iframe width="640" height="420" src="https://www.youtube.com/embed/HPv-n3QKNI8"
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
+                    gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
         </section>
