--- a/story.html
+++ b/story.html
@@ -45,6 +45,8 @@
                 <div class="story-lw">
                     <h3>June 2006</h3>
 
+                    <img id="ft_pic" src="./images/food_truck.jpg">
+
                     <h5>By Derrick & Eleanor Ellis</h5>
 
                     <p>
