Polishing components to flow nicer on mobile.

--- a/media.html
+++ b/media.html
@@ -40,23 +40,21 @@
             </div>
         </nav>
 
-        <section class="s2">
-            <div class="main-container">
-                <div class="media-lw">
-                    <h3>Lumpia World Media</h3>
+        <div class="main-container">
+            <div class="media-lw">
+                <h3>Lumpia World Media</h3>
 
-                    <h5>LUMPIA WORLD WINS "BEST FOOD TRUCK" IN THE 2016 BEST OF WESTERN WASHINGTON CONTEST</h5>
+                <h5>LUMPIA WORLD WINS "BEST FOOD TRUCK" IN THE 2016 BEST OF WESTERN WASHINGTON CONTEST</h5>
 
-                    <iframe width="640" height="420" style="border:1px solid #e6e6e6" scrolling="no"
-                    src="https://king5.com/embeds/video/281-2423759/iframe" allowfullscreen="true"
-                    webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+                <iframe width="100%" height="420" style="border:1px solid #e6e6e6" scrolling="no"
+                src="https://king5.com/embeds/video/281-2423759/iframe" allowfullscreen="true"
+                webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
 
-                    <iframe width="640" height="420" src="https://www.youtube.com/embed/HPv-n3QKNI8"
-                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
-                    gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
+                <iframe width="100%" height="420" src="https://www.youtube.com/embed/HPv-n3QKNI8"
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
+                gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-        </section>
+        </div>
 
         <script type="text/javascript" src="script.js"></script>
         
