Polished and added core features to the pages.

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,10 @@
 
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+        <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+
         <link rel="stylesheet" type="text/css" href="default.css">
+        <link rel="stylesheet" type="text/css" href="contact.css">
 
     </head>
     <body>
@@ -42,6 +45,16 @@
 
         <div class="main-container">
             <h3 style="text-align: center;">Get In Touch</h3>
+
+            <div class="google-maps">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2705.940020146892!2d-122.31492978413605!3d47.
+                295971717377114!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54901537173dfa3f%3A0xd97d5709ab28087f!2s
+                Lumpia%20World!5e0!3m2!1sen!2sus!4v1603533909089!5m2!1sen!2sus" width="500" height="350" frameborder="0" style="border:0;"
+                allowfullscreen="" aria-hidden="false" tabindex="0" id="gmaps"></iframe>
+
+                <p>1610 S 341st Pl J, Federal Way, WA 98003</p>
+            </div>
+
             <form id="contact-form">
                 <label>Name</label>
                 <input class="input-field" type="text" name="name">
@@ -54,6 +67,16 @@
                 <input id="submit-btn" type="submit" value="Send">
             </form>
         </div>
+
+        <footer>
+            <div class="footer-social-links">
+                <a href="http://www.facebook.com/Lumpia-World-173390752107/" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a>
+                <a href="https://twitter.com/LumpiaWorld" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a>
+                <a href="https://www.instagram.com/lumpiaworld/" title="Instagram" target="_blank"><i class="fa fa-instagram"></i></a>
+                <p>Phone: 253 874 5867</p>
+                <p>Email: sales@lumpiaworld.com</p>
+            </div>
+        </footer>
 
         <script type="text/javascript" src="script.js"></script>
         
