--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+        <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+
         <link rel="stylesheet" type="text/css" href="default.css">
         <link rel="stylesheet" type="text/css" href="slideshow.css">
 
@@ -87,7 +89,39 @@
                     Family owned with store fronts, Lumpia World can even cater your events! Come have a taste of the islands today!
                 </p>
             </div>
+
+            <div class="schedule">
+                <h3>Truck Schedule</h3>
+
+                <h5>Monday</h5>
+                <p>FIFE, WA: Costco Fife Business Center / 3900 20th Street E, Fife WA. 98424. Time: 10am - 2pm</p>
+
+                <h5>Tuesday</h5>
+                <p>EDGEWOOD, WA. Acorn Brewing / 2105 Meridian Ave E, Edgewood, WA. 98371. Time: 5pm - 9pm</p>
+
+                <h5>Wednesday</h5>
+                <p>To be determined! Check with our Facebook/Twitter/Instagram to stay updated!</p>
+
+                <h5>Thursday</h5>
+                <p>To be determined! Check with our Facebook/Twitter/Instagram to stay updated!</p>
+
+                <h5>Friday</h5>
+                <p>EDGEWOOD, WA. Acorn Brewing / 2105 Meridian Ave E, Edgewood, WA. 98371. Time: 5pm - 9pm</p>
+
+                <h5>Saturday & Sunday</h5>
+                <p>To be determined! Check with our Facebook/Twitter/Instagram to stay updated!</p>
+            </div>
         </div>
+
+        <footer>
+            <div class="footer-social-links">
+                <a href="http://www.facebook.com/Lumpia-World-173390752107/" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a>
+                <a href="https://twitter.com/LumpiaWorld" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a>
+                <a href="https://www.instagram.com/lumpiaworld/" title="Instagram" target="_blank"><i class="fa fa-instagram"></i></a>
+                <p>Phone: 253 874 5867</p>
+                <p>Email: sales@lumpiaworld.com</p>
+            </div>
+        </footer>
 
         <script type="text/javascript" src="script.js"></script>
         <script type="text/javascript" src="slide.js"></script>
