Disabled video auto start.

--- a/media.html
+++ b/media.html
@@ -50,11 +50,11 @@
 
                 <iframe width="100%" height="420" style="border:1px solid #e6e6e6" scrolling="no"
                 src="https://king5.com/embeds/video/281-2423759/iframe" allowfullscreen="true"
-                webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+                webkitallowfullscreen="true" mozallowfullscreen="true" autostart="false"></iframe>
 
                 <iframe width="100%" height="420" src="https://www.youtube.com/embed/HPv-n3QKNI8"
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
-                gyroscope; picture-in-picture" allowfullscreen></iframe>
+                gyroscope; picture-in-picture" allowfullscreen autostart="false"></iframe>
             </div>
         </div>
 
