--- a/menu.html
+++ b/menu.html
@@ -90,6 +90,7 @@
         </footer>
 
         <script type="text/javascript" src="script.js"></script>
+        <script type="text/javascript" src="menubutton.js"></script>
         
     </body>
 </html>
