Disabled phone number detection for iOS

--- a/menu.html
+++ b/menu.html
@@ -13,6 +13,9 @@
         <link rel="stylesheet" type="text/css" href="default.css">
         <link rel="stylesheet" type="text/css" href="button.css">
 
+        <!-- iOS keeps trying to format the number in the footer as callable, this is to stop that becuase
+            it keeps ruining my formatting :( -->
+        <meta name="format-detection" content="telephone=no" />
     </head>
     <body>
         <nav>
