--- a/story.html
+++ b/story.html
@@ -12,6 +12,9 @@
 
         <link rel="stylesheet" type="text/css" href="default.css">
 
+        <!-- iOS keeps trying to format the number in the footer as callable, this is to stop that becuase
+            it keeps ruining my formatting :( -->
+        <meta name="format-detection" content="telephone=no" />
     </head>
     <body>
         <nav>
